# MyFTP

./: .tmuxinator.yml  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.yaml  pyproject.toml
client_directory/: file_local.txt
server_directory/: file_server.txt  image_server.txt  numbers.txt
src/myftp/: client.py  server.py
src/myftp/udp/: udp_client.py  udp_server.py
